# duilib_tools

./: .gitignore  CMakeLists.txt  README.md  build.bat
docs/specs/: 2026-05-21-duilib-control-finder-design.md
docs/superpowers/plans/: 2026-06-03-hookdll-refactor-plan.md
docs/superpowers/specs/: 2026-06-03-hookdll-refactor-design.md
include/: IPC.h
plans/: 2026-05-21-duilib-control-finder.md
src/Finder/: CMakeLists.txt  Finder.cpp
src/HookDll/: CMakeLists.txt  HookDll.cpp
src/HookDll/accessible/: Accessible.cpp  Accessible.h
src/HookDll/common/: ThreadEnum.cpp  ThreadEnum.h
src/HookDll/duilib/: ModuleFinder.cpp  ModuleFinder.h
src/HookDll/hooks/: MessageHandler.cpp  MessageHandler.h
